@@ -1,3 +1,8 @@
+2005-11-15  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* xstrtod.c: Don't bother with #pragma STDC FENV_ACCESS ON, as
+	coreutils no longer futzes with rounding modes.
+
 2005-11-08  Eric Blake  <ebb9@byu.net>
 
 	* getaddrinfo.h: Use #if !, not #ifndef, for AC_CHECK_DECLS.
